# nidaqwrapper

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: simulated_devices.ini
examples/: 01_analog_input.ipynb  01_device_utilities.ipynb  02_analog_input.ipynb  02_analog_output.ipynb  03_analog_output.ipynb  03_digital_io.ipynb  04_daq_handler.ipynb  04_digital_io.ipynb  05_daq_handler.ipynb  05_multi_handler.ipynb  06_config_toml.ipynb  06_multi_handler.ipynb  07_config_toml.ipynb  07_raw_task_injection.ipynb  08_device_utilities.ipynb  08_raw_task_injection.ipynb
scripts/: setup_simulated_devices.py  setup_simulated_devices.sh
src/nidaqwrapper/: __init__.py  advanced.py  ai_task.py  ao_task.py  base_task.py  digital.py  handler.py  multi_handler.py  task_input.py  task_output.py  utils.py  wrapper.py
tests/: conftest.py  test_advanced.py  test_ai_task.py  test_ao_task.py  test_digital.py  test_handler.py  test_hardware.py  test_hardware_task_input.py  test_multi_handler.py  test_sim_ai_task.py  test_sim_ao_task.py  test_sim_ci_co_stubs.py  test_sim_config.py  test_sim_digital.py  test_sim_discovery.py  test_sim_errors.py  test_sim_handler.py  test_sim_multi.py  test_sim_passthrough.py  test_task_input.py  test_task_output.py  test_utils.py  test_wrapper.py
